--- a/eLawsLanding/tsconfig.app.json
+++ b/eLawsLanding/tsconfig.app.json
@@ -23,5 +23,8 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+  "include": [
+    "src",
+    "../../e-lawyer/e-lawyer/scripts/seedSchemas.ts"
+  ]
 }
