feat: added chats

--- a/eLawsLanding/package.json
+++ b/eLawsLanding/package.json
@@ -16,6 +16,9 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@reduxjs/toolkit": "^2.9.0",
+    "@stablelib/bytes": "^2.0.1",
+    "@stablelib/random": "^2.0.1",
+    "@stablelib/xchacha20poly1305": "^2.0.1",
     "firebase": "^12.2.1",
     "framer-motion": "^12.23.12",
     "react": "^19.1.1",
