--- a/eLawsLanding/package.json
+++ b/eLawsLanding/package.json
@@ -19,6 +19,8 @@
     "@stablelib/bytes": "^2.0.1",
     "@stablelib/random": "^2.0.1",
     "@stablelib/xchacha20poly1305": "^2.0.1",
+    "@stripe/react-stripe-js": "^5.3.0",
+    "@stripe/stripe-js": "^8.4.0",
     "firebase": "^12.2.1",
     "framer-motion": "^12.23.12",
     "react": "^19.1.1",
