--- a/eLawsLanding/package.json
+++ b/eLawsLanding/package.json
@@ -23,8 +23,10 @@
     "@stripe/stripe-js": "^8.4.0",
     "firebase": "^12.2.1",
     "framer-motion": "^12.23.12",
+    "i18next": "^25.6.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^16.3.5",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2"
   },
